# brush_app

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  make.bat  vcpkg.json
include/: app.h  app.hpp  bounding_box.h  bounding_box.hpp  brush.h  canvas.h  canvas.hpp  canvas_view.h  color.hpp  conversions.h  frame_buffer.h  gui.h  layer.h  program.h  shader.h  shader.hpp  texture.h  tools.h  user_state.h  vao.h  vec.h  window.h
src/: app.cpp  brush.cpp  canvas.cpp  canvas_view.cpp  gui.cpp  layer.cpp  main.cpp  program.cpp  tools.cpp  window.cpp
src/shaders/: brush_eraser.frag  brush_pen.frag  canvas_view.frag  canvas_view.vert  draw_circle.frag  draw_circle_cursor.frag  fragment.glsl  quad.frag  quad.vert  quad_frag.glsl  quad_vert.glsl  vertex.glsl
